apps/miniflux/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: miniflux
    app.kubernetes.io/part-of: miniflux
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: miniflux
      app.kubernetes.io/part-of: miniflux
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: kustomize
        app.kubernetes.io/name: miniflux
        app.kubernetes.io/part-of: miniflux
    spec:
      containers:
        - name: miniflux
          image: miniflux/miniflux:latest
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
      nodeSelector:
        kubernetes.io/hostname: pj
